# OOP_labs

lab1/: CMakeLists.txt  main.cpp  my_input.h  sparse_matrix.cpp  sparse_matrix.h
lab2/: CMakeLists.txt  changelog.md  main.cpp
lab2/lab2_lib/: CMakeLists.txt  cardioid.cpp  cardioid.h  math_plane.cpp  math_plane.h  my_input.h
lab2/testing/: CMakeLists.txt  test-cardioid.cpp
lab3/: CMakeLists.txt  README.md
lab3/application/: CMakeLists.txt
lab3/varA/: CMakeLists.txt  Hex.cpp  Hex.h  main.cpp
lab3/varA/source/: CMakeLists.txt  Hex.cpp  Hex.h  my_input.h
lab3/varA/testing/: CMakeLists.txt  hex-test.cpp
lab3/varB/: CMakeLists.txt  Hex.cpp  Hex.h  main.cpp
lab3/varB/source/: Hex.cpp  Hex.h  my_input.h
lab3/varB/testing/: hex-test.cpp
lab3/varC/: CMakeLists.txt  main.cpp
lab3/varC/source/: CMakeLists.txt  Hex.cpp  Hex.h  my_input.cpp  my_input.h
lab3/varC/testing/: hex-test.cpp
lab4/: CMakeLists.txt  Doxyfile  README.md  removed.txt
lab4/Documentation/html/: annotated.html  base__structures_8h_source.html  classbase__structures_1_1Basement-members.html  classbase__structures_1_1Basement.html  classbase__structures_1_1Basement__coll__graph.dot  (+137 more)
lab4/TDS/: CMakeLists.txt
lab4/TestFrame/: CMakeLists.txt
lab4/TestFrame2/: CMakeLists.txt
lab4/structures/: CMakeLists.txt  Map.cpp  Map.h  Monsters.cpp  Monsters.h  Units.cpp  Units.h  base_structures.cpp  base_structures.h  level_descriptors.cpp  level_descriptors.h  level_discriptors.cpp  level_discriptors.h  list.h
lab4/testing/: CMakeLists.txt  base_structures_test.cpp
(+153 files in other folders)
